--- a/css/pages/photographer.css
+++ b/css/pages/photographer.css
@@ -338,6 +338,92 @@ border: 2px solid #ff0000;
 .contact-modal__validate--close{
   display: none;
 }
+/**
+
+PHOTOGRAPHER LIGHTBOX
+
+*/
+.lightbox-modal__box{
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin:auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 3;
+}
+
+button[class*='lb-btn__']{
+  height: 75px;
+  width: 75px;
+  background-color: transparent;
+  border: transparent;
+  cursor: pointer;    
+  font-weight: 700;
+  font-size: 70px;
+  color: #901C1C;
+  transition: 350ms;
+}
+
+button[class*='lb-btn__']:hover,button[class*='lb-btn__']:focus{
+  color: #D3573C;
+}
+
+.lb-btn__close{
+  position: absolute;
+  top: 2%;
+}
+
+.lb-container__left,
+.lb-container__rigth{
+  width: 10vw;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.lb-container__middle{
+  width: 80vw;
+  padding: 2% 0;
+}
+
+.lb-figure{
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.lb__image{
+  max-width: 80vw;
+  max-height: 80vh;
+  object-fit: cover; 
+  margin: auto;   
+}
+
+.lb_caption--box{
+  height: 30px;
+  width: 100%;
+  display:flex;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+}
+
+.lb__title{
+  font-size: 24px;
+  color: #901C1C;
+}
+
 /*************************************************************************
 
 Media Queries
