--- a/css/pages/photographer.css
+++ b/css/pages/photographer.css
@@ -97,7 +97,7 @@ PHOTOGRAPHER MEDIAS
 
 .media-image__image{
   width: 350px;
-  height: 350px;
+  height: 300px;
   object-fit: cover;
   border-radius: 5px;
   cursor: pointer;
@@ -343,19 +343,39 @@ border: 2px solid #ff0000;
 PHOTOGRAPHER LIGHTBOX
 
 */
-.lightbox-modal__box{
-  width: 100%;
-  height: 100%;
+
+dialog.lightbox-modal{
+  width: 100vw;
+  height: 100vh;
+  max-height: 100%;
+  max-width: 100%;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  border: none;
+}
+.lb-wrapper{
+  width: 100vw;
+  height: 100vh;
   background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+}
+
+.lightbox-modal__box{
+  width: 90%;
+  height: 100%;  
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin:auto;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 3;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 button[class*='lb-btn__']{
@@ -384,44 +404,35 @@ button[class*='lb-btn__']:hover,button[class*='lb-btn__']:focus{
   width: 10vw;
   height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+}
+.lb-container__left{
+  justify-content: flex-end;
 }
 
 .lb-container__middle{
   width: 80vw;
   padding: 2% 0;
-}
-
-.lb-figure{
-  height: 100%;
-  width: 100%;
-  margin: 0;
   display: flex;
-  flex-flow: column;
+  flex-flow: row;
+  flex-wrap: nowrap;
   justify-content: center;
-  align-items: center;
+
 }
 
 .lb__image{
-  max-width: 80vw;
-  max-height: 80vh;
+  max-width: 100vh;
+  max-height: 90vh;
   object-fit: cover; 
-  margin: auto;   
+  margin: auto;
+  border-radius: 5px; 
 }
 
-.lb_caption--box{
-  height: 30px;
-  width: 100%;
-  display:flex;
-  justify-content: flex-start;
-  align-items: center;
-  position: relative;
-}
-
-.lb__title{
+.lb__caption{
   font-size: 24px;
   color: #901C1C;
+  margin:auto;
 }
 
 /*************************************************************************
