--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -59,14 +59,16 @@
 }
 
 .photographer-article__tagline{
-  font-size: 10px;
+  /*font-size: 10px;*/
+  font-size: 11px;
   font-weight: 400;
   margin: 0;
 }
 
 .photographer-article__price{
   color: #757575;
-  font-size: 9px;
+  /*font-size: 9px;*/
+  font-size: 11px;
   font-weight: 400;
   margin: 0;
 }
